welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: reassignment to val
	if ( (day = 1) || (day = 2) || (day = 3) || (day = 4) || (day = 5) && (!vacation) ) { "7:00" }
                  ^alarmClock:3: error: reassignment to val
	else if ( (day = 0) || (day = 6) && (!vacation) ) { "10:00" }
                       ^alarmClock:4: error: reassignment to val
	else if ( (day = 1) || (day = 2) || (day = 3) || (day = 4) || (day = 5) && (vacation) ) { "10:00" }
                       ^alarmClock:5: error: reassignment to val
	else if ( (day = 0) || (day = 6) && (vacation) ) { "off" }
                       ^alarmClock:5: error: type mismatch;
 found   : Unit
 required: String
	else if ( (day = 0) || (day = 6) && (vacation) ) { "off" }
             ^